deploy: 660d56e9b02e5b90eb47982d93116f7e2e1670fc

--- a/wj.htm
+++ b/wj.htm
@@ -5457,7 +5457,8 @@ invitational hands.  Consequently, we need to move game-forcing clubs to 3
     &hearts;
    </span>
    response to
-Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
+Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.  The
+relay structure generally lets the strong opener declare notrump.
   </p>
   <div class="tree">
    <ul>
@@ -5481,7 +5482,7 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           </span>
          </td>
          <td>
-          !S/T (R)
+          !S/T (R), ~11+ HCP
          </td>
         </tr>
        </table>
@@ -5513,7 +5514,7 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           </span>
          </td>
          <td>
-          ! 4=M, 7&ndash;10 HCP
+          !NEG, 7&ndash;10 HCP, 4=M
          </td>
         </tr>
        </table>
@@ -5525,7 +5526,7 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
             2NT
            </td>
            <td>
-            !(R)
+            !Ask for a side suit, a 5-card minor or the other 4-card major
            </td>
           </tr>
          </table>
@@ -5539,7 +5540,7 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           2NT
          </td>
          <td>
-          ! 5=M, not BAL, 7&ndash;10 HCP
+          !MIN, 7&ndash;10 HCP, 5=M, not BAL
          </td>
         </tr>
        </table>
@@ -5554,7 +5555,7 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
             </span>
            </td>
            <td>
-            !(R)
+            !Ask for the side suit
            </td>
           </tr>
          </table>
@@ -5571,11 +5572,11 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           </span>
          </td>
          <td>
-          ! 5+
+          !Mild S/T, 9&ndash;11 HCP, 5+
           <span class="ccolor">
            &clubs;
           </span>
-          , 4=M, 9&ndash;11 HCP
+          , 4=M
          </td>
         </tr>
        </table>
@@ -5590,11 +5591,11 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           </span>
          </td>
          <td>
-          ! 5+
+          !Mild S/T, 9&ndash;11 HCP, 5+
           <span class="dcolor">
            &diams;
           </span>
-          , 4=M, 9&ndash;11 HCP
+          , 4=M
          </td>
         </tr>
        </table>
@@ -5606,7 +5607,7 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           3M
          </td>
          <td>
-          !BAL 5=M, 7&ndash;10 HCP
+          !MIN, 7&ndash;10 HCP, BAL 5=M
          </td>
         </tr>
        </table>
@@ -5618,7 +5619,7 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           3oM
          </td>
          <td>
-          !SPL, 0&ndash;1#, 6+M, 7&ndash;10 HCP
+          !SPL, 7&ndash;10 HCP, 0&ndash;1#, 6+M
          </td>
         </tr>
        </table>
@@ -5630,15 +5631,7 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           3NT
          </td>
          <td>
-          ! 6+M, 2+oM, 2+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 2+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 7&ndash;10 HCP
+          !MIN, 7&ndash;10 HCP, 6+M
          </td>
         </tr>
        </table>
@@ -5653,11 +5646,11 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
+          !SPL, 7&ndash;10 HCP, 0&ndash;1
           <span class="ccolor">
            &clubs;
           </span>
-          , 6+M, 7&ndash;10 HCP
+          , 6+M
          </td>
         </tr>
        </table>
@@ -5672,11 +5665,11 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
+          !SPL, 7&ndash;10 HCP, 0&ndash;1
           <span class="dcolor">
            &diams;
           </span>
-          , 6+M, 7&ndash;10 HCP
+          , 6+M
          </td>
         </tr>
        </table>
@@ -5727,10 +5720,39 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
             </span>
            </td>
            <td>
-            !(R)
+            !Ask for a side suit
            </td>
           </tr>
          </table>
+         <ul>
+          <li class="node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              3M
+             </td>
+             <td>
+              ! 4+
+              <span class="ccolor">
+               &clubs;
+              </span>
+             </td>
+            </tr>
+           </table>
+          </li>
+          <li class="last node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              3NT
+             </td>
+             <td>
+              4M(333)
+             </td>
+            </tr>
+           </table>
+          </li>
+         </ul>
         </li>
        </ul>
       </li>
@@ -5776,18 +5798,6 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3M
-         </td>
-         <td>
-          !BAL 5=M
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
           3oM
          </td>
          <td>
@@ -5800,478 +5810,41 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          !6+M, 2+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 2+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !SPL, 0&ndash;1
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 6+M
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          4
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !SPL, 0&ndash;1
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 6+M
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     -1
-     <span class="hcolor">
-      &hearts;
-     </span>
-     -2
-     <span class="dcolor">
-      &diams;
-     </span>
-     -2
-     <span class="hcolor">
-      &hearts;
-     </span>
-     -2
-     <span class="scolor">
-      &spades;
-     </span>
-     -2NT-3
-     <span class="ccolor">
-      &clubs;
-     </span>
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          ! 4=
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          ! 4=
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          ! 44(xx)
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          ! 3433
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     -1
-     <span class="scolor">
-      &spades;
-     </span>
-     -2
-     <span class="dcolor">
-      &diams;
-     </span>
-     -2
-     <span class="hcolor">
-      &hearts;
-     </span>
-     -2
-     <span class="scolor">
-      &spades;
-     </span>
-     -2NT-3
-     <span class="ccolor">
-      &clubs;
-     </span>
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          ! 4=
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          ! 4=
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          ! 4333
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     -1
-     <span class="hcolor">
-      &hearts;
-     </span>
-     -2
-     <span class="dcolor">
-      &diams;
-     </span>
-     -2
-     <span class="scolor">
-      &spades;
-     </span>
-     -2NT
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          ! 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 7&ndash;8 HCP
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          ! 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 7&ndash;8 HCP
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          ! 1444
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          ! 44(xx)
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          BAL
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     -1
-     <span class="scolor">
-      &spades;
-     </span>
-     -2
-     <span class="dcolor">
-      &diams;
-     </span>
-     -2
-     <span class="scolor">
-      &spades;
-     </span>
-     -2NT
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          ! 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 7&ndash;8 HCP
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          ! 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 7&ndash;8 HCP
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          ! 4144
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          BAL
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     -1M-2
-     <span class="dcolor">
-      &diams;
-     </span>
-     -2NT-3
-     <span class="ccolor">
-      &clubs;
-     </span>
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          ! 4+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
           3M
          </td>
          <td>
-          ! 4+
+          !BAL 5=M
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          ! 6+M
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
           <span class="ccolor">
            &clubs;
           </span>
+         </td>
+         <td>
+          !SPL, 0&ndash;1
+          <span class="ccolor">
+           &clubs;
+          </span>
+          , 6+M
          </td>
         </tr>
        </table>
@@ -6280,10 +5853,17 @@ Odwrotka is a slam try with 11+ HCP or a certain fit and &lt;= 8.0 NLTC.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3oM
+          4
+          <span class="dcolor">
+           &diams;
+          </span>
          </td>
          <td>
-          ! 4+#
+          !SPL, 0&ndash;1
+          <span class="dcolor">
+           &diams;
+          </span>
+          , 6+M
          </td>
         </tr>
        </table>
