--- a/wj.htm
+++ b/wj.htm
@@ -7791,7 +7791,7 @@ double&rdquo; by accepting the transfer.
           </span>
          </td>
          <td>
-          PRE, 0&ndash;7 HCP, 3+
+          PRE, 0&ndash;8 HCP, 3+
           <span class="ccolor">
            &clubs;
           </span>
@@ -7809,7 +7809,7 @@ double&rdquo; by accepting the transfer.
           </span>
          </td>
          <td>
-          FG, 5+
+          INV, 6+
           <span class="dcolor">
            &diams;
           </span>
@@ -7878,10 +7878,11 @@ double&rdquo; by accepting the transfer.
           2NT
          </td>
          <td>
-          !PRE, 0&ndash;7 HCP, 4+
+          !TRF, PRE 4+
           <span class="ccolor">
            &clubs;
           </span>
+          or BAL FG
          </td>
         </tr>
        </table>
@@ -7914,15 +7915,10 @@ double&rdquo; by accepting the transfer.
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
+          FG, 6+
           <span class="dcolor">
            &diams;
           </span>
-          , 4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 12&ndash;15 HCP
          </td>
         </tr>
        </table>
@@ -7937,15 +7933,18 @@ double&rdquo; by accepting the transfer.
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
+          !FG SPL, 0&ndash;1
           <span class="hcolor">
            &hearts;
+          </span>
+          , 0&ndash;3
+          <span class="scolor">
+           &spades;
           </span>
           , 4+
           <span class="ccolor">
            &clubs;
           </span>
-          , 12&ndash;15 HCP
          </td>
         </tr>
        </table>
@@ -7960,15 +7959,41 @@ double&rdquo; by accepting the transfer.
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
+          !FG SPL, 0&ndash;1
           <span class="scolor">
            &spades;
+          </span>
+          , 0&ndash;3
+          <span class="hcolor">
+           &hearts;
           </span>
           , 4+
           <span class="ccolor">
            &clubs;
           </span>
-          , 12&ndash;15 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          To play, 12&ndash;15 HCP, 1&ndash;3
+          <span class="scolor">
+           &spades;
+          </span>
+          , 1&ndash;3
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , 1&ndash;3
+          <span class="ccolor">
+           &clubs;
+          </span>
          </td>
         </tr>
        </table>
@@ -7977,22 +8002,13 @@ double&rdquo; by accepting the transfer.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
+          4
+          <span class="ccolor">
+           &clubs;
+          </span>
          </td>
          <td>
-          12&ndash;15 HCP, 2&ndash;3
-          <span class="scolor">
-           &spades;
-          </span>
-          , 2&ndash;3
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 2&ndash;4
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 2&ndash;4
+          S/T, 15+ HCP, 4+
           <span class="ccolor">
            &clubs;
           </span>
